# GenericAgent-WebUI

./: .gitignore  .gitmodules  README.md  README.zh-CN.md
backend/: .env.example  pyproject.toml  requirements.txt  run.sh
backend/app/: main.py
backend/app/core/: config.py  ga_integration.py
backend/app/core/_ga_shim/: mykey.py
backend/app/db/: database.py
backend/app/models/: attachment.py  message.py  provider.py  session.py  tool_pref.py
backend/app/routers/: attachments.py  chat.py  providers.py  sessions.py  tools.py
backend/app/schemas/: attachment.py  provider.py  session.py  tool.py
backend/app/services/: agent_service.py  image_service.py  provider_manager.py  session_manager.py  tool_service.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/chat/: ChatView.tsx  InputBox.tsx  MessageBubble.tsx  MessageList.tsx  ToolCallCard.tsx
frontend/src/components/layout/: ChatShell.tsx  LanguageToggle.tsx
frontend/src/components/settings/: ProviderForm.tsx  ProviderList.tsx  ToolToggleList.tsx
frontend/src/components/sidebar/: Sidebar.tsx
frontend/src/components/theme/: ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/hooks/: useAttachments.ts  useChatStream.ts
frontend/src/lib/: api.ts  attachments.ts  chat-stream.ts  image-compress.ts
frontend/src/store/: chat-store.ts  provider-store.ts  session-store.ts
frontend/src/types/: attachment.ts  chat.ts  provider.ts  session.ts  tool.ts
(+10 files in other folders)
