[project]
name = "genericagent-webui-backend"
version = "0.1.0"
description = "FastAPI backend that wraps GenericAgent with a modern WebUI"
requires-python = ">=3.10"
readme = "../README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
